--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,49 +1,63 @@
-     name: CI/CD Pipeline
-     on:
-       push:
-         branches: [ main ]
-     jobs:
-       build-and-deploy:
-         runs-on: ubuntu-latest
-         steps:
-         - name: Checkout code
-           uses: actions/checkout@v4
-         - name: Set up Python
-           uses: actions/setup-python@v5
-           with:
-             python-version: '3.9'
-         - name: Install dependencies
-           run: pip install -r requirements.txt
-         - name: Run tests
-           run: python -m unittest discover
-         - name: Set up Docker Buildx
-           uses: docker/setup-buildx-action@v3
-         - name: Configure AWS credentials
-           uses: aws-actions/configure-aws-credentials@v4
-           with:
-             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-             aws-region: ${{ secrets.AWS_REGION }}
-         - name: Login to Amazon ECR
-           id: login-ecr
-           uses: aws-actions/amazon-ecr-login@v2
-         - name: Build, tag, and push Docker image to ECR
-           env:
-             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-             ECR_REPOSITORY: ci-cd-demo-repo
-             IMAGE_TAG: latest
-           run: |
-             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-         - name: Set up Terraform
-           uses: hashicorp/setup-terraform@v3
-         - name: Terraform Init
-           working-directory: terraform
-           run: terraform init
-         - name: Terraform Plan
-           working-directory: terraform
-           run: terraform plan -out=plan.tfout
-         - name: Terraform Apply
-           working-directory: terraform
-           run: terraform apply -auto-approve plan.tfout
-     
+```yaml
+name: CI/CD Pipeline
+on:
+  push:
+    branches: [ main ]
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+    - name: Run tests
+      run: python -m unittest discover
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+    - name: Build, tag, and push Docker image to ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ci-cd-demo-repo
+        IMAGE_TAG: latest
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push  # Ensure Terraform runs after Docker push
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+    - name: Terraform Init
+      working-directory: terraform
+      run: terraform init
+    - name: Terraform Plan
+      working-directory: terraform
+      run: terraform plan -out=plan.tfout
+    - name: Terraform Apply
+      working-directory: terraform
+      run: terraform apply -auto-approve plan.tfout
+```
