--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,8 +3,32 @@ on:
   push:
     branches: [ main ]
 jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+    - name: Terraform Init
+      working-directory: terraform
+      run: terraform init
+    - name: Terraform Plan
+      working-directory: terraform
+      run: terraform plan -out=plan.tfout
+    - name: Terraform Apply
+      working-directory: terraform
+      run: terraform apply -auto-approve plan.tfout
+
   build-and-push:
     runs-on: ubuntu-latest
+    needs: deploy  # Ensure ECR repo is created before pushing
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -35,27 +59,3 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push  # Ensure Terraform runs after Docker push
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3
-    - name: Terraform Init
-      working-directory: terraform
-      run: terraform init
-    - name: Terraform Plan
-      working-directory: terraform
-      run: terraform plan -out=plan.tfout
-    - name: Terraform Apply
-      working-directory: terraform
-      run: terraform apply -auto-approve plan.tfout
